re PR c/15549 (true !< 'a')

PR c/15549
	Backport from mainline
	2003-08-19  Mark Mitchell  <mark@codesourcery.com>

		PR c++/11946
		* convert.c (convert_to_integer): Use CONVERT_EXPR (instead of
		NOP_EXPR) when necessary.


	PR c/15549
	Backport from mainline
	2003-08-19  Mark Mitchell  <mark@codesourcery.com>

		PR c++/11946.C
		* gcc.dg/c99-bool-1.c: Remove bogus warning.

From-SVN: r83765